--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,24 @@
         android:theme="@style/Theme.SimpleToDoList"
         tools:targetApi="31">
         <activity
+            android:name=".EditTask"
+            android:exported="false"
+            android:label="@string/title_activity_edit_task"
+            android:theme="@style/Theme.SimpleToDoList"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity
+            android:name=".TaskInput"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".TaskInput"
-            android:exported="false" />
     </application>
 
 </manifest>
